# kepler

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
kepler/: __main__.py  api.py
kepler/io/: __init__.py  exporter.py  importer.py
kepler/scheduler/: __init__.py  config.py  model.py
kepler/types/: __init__.py  course.py  enum.py  problem.py  schedule.py  shift.py  solution.py  student.py  time.py  timeslot.py  weekday.py
tests/io/: test_exporter.py  test_importer.py
tests/scheduler/: test_config.py  test_model.py
tests/types/: test_course.py  test_enum.py  test_problem.py  test_schedule.py  test_shift.py  test_solution.py  test_student.py  test_time.py  test_timeslot.py  test_weekday.py
